[package]
name = "atcha"
version = "0.1.0"
edition = "2021"

[lib]
name = "atcha"
crate-type = ["cdylib"]


[[bin]]
name = "atcha-inject"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctor = "0.1.23"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
ilhook = "1.3.0"
libc = "0.2.133"
sdl2-sys = "0.35.2"
once_cell = "1.15.0"
egui = "0.19"
egui_glow = "0.19.0"
glow = "0.11.2"
